--- a/psd_site/mail_us.html
+++ b/psd_site/mail_us.html
@@ -33,7 +33,7 @@
     </header>
       <div id="mail_form">
 
-          <form method='post' action='register.php'>
+          <form method='GET' action='register.php' enctype="multipart/form-data">
               Name: <input type='text' name='name'> <br>
               Email: <input type='email' name='email'> <br>
               Phone: <input type='text' name='phone'> <br>
